added base html structure and favicon from free repo

--- a/gui/index.html
+++ b/gui/index.html
@@ -7,7 +7,38 @@
     <link rel="icon" type="image/png" href="gui/media/favicon.ico">
 </head>
 <body>
-Celo gui placeholder
+
+    <div id="app">
+        <div id="header">
+            <div id="menu">
+                CELO
+            </div>
+            <div id="status_bar">
+                status bar
+            </div>
+            <div id="toggle-bar">
+                <button class="toggle button" id="worker_toggle">Worker off</button>
+            </div>
+        </div>
+        <div id="windows">
+            <div id="command_area">
+                <div id="command_response">
+                    Command response
+                </div>
+                <div id="command_input">
+                    Command input
+                </div>
+            </div>
+            <div id="state_area">
+                <div id="visualization">
+                    Visualizaiton
+                </div>
+                <div id="running_parameters">
+                    Running parameters
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="gui/js/app.js"></script>
 </body>
