added in additional coloring and css options

--- a/gui/index.html
+++ b/gui/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id="app" class="flex_parent app">
-        <div id="header" class="flex_child flex_parent header">
+        <div id="header" class="flex_child flex_parent header border_bottom">
             <div id="logo" class="flex_child logo">
                 CELO
             </div>
@@ -21,8 +21,8 @@
             </div>
         </div>
         <div id="windows" class="flex_child flex_parent windows">
-            <div id="command_area" class="flex_child flex_parent command_area">
-                <div id="command_response" class="flex_child command_response">
+            <div id="command_area" class="flex_child flex_parent command_area border_right">
+                <div id="command_response" class="flex_child command_response border_bottom">
                     Command response
                 </div>
                 <div id="command_input" class="flex_child command_input">
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div id="state_area" class="flex_child flex_parent state_area">
-                <div id="visualization" class="flex_child visualization">
+                <div id="visualization" class="flex_child visualization border_bottom">
                     Visualizaiton
                 </div>
                 <div id="running_parameters" class="flex_child running_parameters">
