added webpack for bundling of js and css files, added initial js app structure

--- a/gui/index.html
+++ b/gui/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Celo GUI</title>
-    <link rel="stylesheet" href="gui/css/app.css">
+    <link rel="stylesheet" href="gui/dist/celo-gui.bundle.css">
     <link rel="icon" type="image/png" href="gui/media/favicon.ico">
 </head>
 <body>
@@ -40,6 +40,6 @@
         </div>
     </div>
 
-    <script src="gui/js/app.js"></script>
+    <script src="gui/dist/celo-gui.bundle.js"></script>
 </body>
 </html>
